fixed findbugs warnings.